# loki-system-metrics-agent

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build_project.sh  install_grafana.sh  install_prometheus.sh  main.cpp  run_prometheus_grafana.sh
metrics/: metrics_cpu.cpp  metrics_cpu.h  metrics_disk.cpp  metrics_disk.h  metrics_memory.cpp  metrics_memory.h  metrics_network.cpp  metrics_network.h
